--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,13 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<title>DB</title>
+	<style>
+		* {
+			transition: all 0.15s ease;
+		}
+
+		
+	</style>
 </head>
 <body>
 </body>
